# getgnulinux

./: .editorconfig  .env  .eslintrc.json  .gitignore  .gitlab-ci.yml  .htaccess  .rsync-exclude  .travis.yml  Dockerfile  Makefile  Makefile.in  README.md  aclocal.m4  autogen.sh  bower.json  clean-credits  conf.php  configure  configure.ac  credits2html  crowdin.yml  docker-compose.yml  gulpfile.js  index.html  index.php  l10n-credits.js  messages.pot  package-lock.json  package.json  robots.txt  settings.php.new
.ci/: build
_credits/: index.html
_include/: footer.php  footer_alt.php  footer_clean.php  footer_simple.php  header.php  methods.php
_legal/: index.html
_pages/: 404.php  credits.php  home.php  legal.php  link_buttons.php  linux.linux_faq.php  linux.misunderstanding_free_software.php  linux.php  linux.screenshots.php  more.php  not_found.php  switch_to_linux.choose_a_distribution.php  switch_to_linux.from_windows_to_linux.php  switch_to_linux.php  switch_to_linux.try_or_install.php  windows.php  windows.restrictions.further_details.php  windows.restrictions.php  windows.stand_for_a_free_society.php  windows.what_about_choice.php  windows.what_about_source_code.php
_style/: credits.css  fonts.css  further_reading-ltr.css  ie6-ltr.css  ie6-rtl.css  ie7-ltr.css  ie7-rtl.css  index-ltr.css  index-rtl.css  legal.css  linux-ltr.css  linux-rtl.css  linux.linux_faq-ltr.css  linux.misunderstanding_free_software-ltr.css  linux.screenshots-ltr.css  maincss-ltr.css  maincss-rtl.css  maincss.css  more-ltr.css  more-rtl.css  piwik.js  previous_next_up-ltr.css  (+19 more)
(+447 files in other folders)
