#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([getgnulinux], [2.0], [https://gitlab.com/getgnulinux/getgnulinux/-/issues])
AM_INIT_AUTOMAKE

AM_PO_SUBDIRS

AC_CONFIG_FILES([
    Makefile
    docroot/Makefile
    docroot/settings.php
    po/Makefile.in
])

AC_OUTPUT
